--- a/Spring/Photostagram/src/main/resources/static/css/post_modal.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post_modal.css
@@ -21,7 +21,7 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 295px;
-    height: 210px;
+    height: 144px;
     position: relative;
 }
 
@@ -36,39 +36,187 @@
 
 .modal_postDelete{
     width:290px;
-    height:70px;
+    height:48px;
     border-bottom:1px solid gray;
+    text-align:center;
 }
 
 .modal_postDelete > span{
-    color:red;
-    line-height:70px;
-    font-size:20px;
+    color:#ed4956;
+    line-height:48px;
+    font-size:14px;
     font-weight:bold;
-    text-align:center;
 }
 
 .modal_postModify{
     width:290px;
-    height:70px;
+    height:48px;
     border-bottom:1px solid gray;
+    text-align:center;
 }
 
 .modal_postModify > span{
-    color:black;
-    font-size:20px;
-    line-height:70px;
-    text-align:center;
+    color:blue;
+    font-size:14px;
+    line-height:48px;
 }
 
 .modal_postCancel{
     width:290px;
-    height:70px;
+    height:48px;
+    text-align:center;
 }
 
-.modal_postModify > span{
+.modal_postCancel > span{
     color:black;
-    font-size:20px;
-    line-height:70px;
+    font-size:14px;
+    line-height:48px;
+}
+
+/*삭제버튼클릭시 확인창*/
+
+.modal_post_window_delete {
+    background: white;
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 400px;
+    height: 202px;
+    position: relative;
+}
+
+.confirm_delete {
+    height:106px;
+    width:400px;
     text-align:center;
+    border-bottom:1px solid #737373;
+    display:block;
+}
+
+.post_delete{
+    width:400px;
+    height:48px;
+    text-align:center;
+    border-bottom:1px solid #737373;
+}
+
+.post_delete_cancel{
+    width:400px;
+    height:48px;
+    text-align:center;
+}
+
+.confirm_delete > span:nth-child(1){
+    color:#000000;
+    font-size:20px;
+    position: absolute;
+    top: 25px;
+    left: 26%;
+}
+
+.confirm_delete > span:nth-child(2){
+    color:#737373;
+    font-size:14px;
+    position: absolute;
+    top: 55px;
+    left: 27%;
+}
+
+.post_delete > span{
+    color:#ed4956;
+    line-height:48px;
+    font-size:14px;
+    font-weight:bold;
+}
+
+.post_delete_cancel > span{
+    color:#000000;
+    line-height:48px;
+    font-size:14px;
+}
+
+/*수정버튼 클릭시 수정창*/
+.modal_postModify_window{
+    background: white;
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 800px;
+    height: 600px;
+    position: relative;
+}
+.modal_postModify_title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.18);
+}
+
+.modal_postModify_title > div:nth-child(2){
+   font-weight: bold;
+   font-size: 20px;
+   margin-top: 5px;
+ }
+
+.modal_title_side_post_cancel{
+    margin: 8px;
+    flex: 0 0 40px;
+    text-align: center;
+    font-size:14px;
+}
+
+.modal_title_side_post_modify{
+    margin: 8px;
+    flex: 0 0 40px;
+    text-align: center;
+    font-size:14px;
+    color:#0095f6;
+}
+
+.modal_image_content_post{
+    display: flex;
+    flex-direction: row;
+}
+.modal_image_upload_content_post{
+    text-align: center;
+    transition: all .15s ease-in-out;
+    width:500px;
+    height: 548px;
+    overflow: hidden;
+    position: relative;
+}
+
+.modal_image_upload_content_post > img{
+    object-fit:cover;
+    width:500px;
+    height:548px;
+}
+
+#input_image_post > .beforeBtn{
+  position: fixed;
+  top: 45%;
+  left: 9px;
+  background: #4e4e4e;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  color:white;
+  border: none;
+  visibility: hidden;
+}
+#input_image_post > .afterBtn{
+  position: fixed;
+  top: 45%;
+  right: 305px;
+  background: #4e4e4e;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  color:white;
+  border: none;
+  visibility: hidden;
 }
