--- a/Spring/Photostagram/src/main/resources/templates/board/quest.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/quest.html
@@ -3,19 +3,34 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/boardLayout}">
 <th:block layout:fragment="main">
-    <main>
-        <div class="pic">
-            <a href="#">
-                    <video src="#"></video>
-                    <i class="fa-solid fa-film fa-2x faIcons"></i>
-                    <img src="#">
-                        <i class="fa-solid fa-images fa-2x faIcons"></i>
-            </a>
-            <div class="picOver">
-                <div><i class="fa-solid fa-heart fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan"></span></div>
-                <div><i class="fa-solid fa-comment fa-2x picOverI" style="color: #f0f4f9;"></i><span class="picOverSpan"></span></div>
+    <section class="quest-screen">
+        <main class="quest-content">
+            <div class="content1">
+                <div class="content2">
+                    <div class="content3">
+                        <div class="content4">
+
+                            <div class="content5">
+                                <div class="content6">
+                                    <a class="content7" href="#">
+                                        <div class="content8">
+                                            <div class="content9">
+                                                <img class="content10" src="../profile/img/300x300-1.png" alt="게시물 이미지">
+                                            </div>
+                                            <div class="content11"></div>
+                                        </div>
+                                        <div class="content12">
+                                            <div class="content13"></div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </section>
 </th:block>
 </html>
