--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -321,7 +321,14 @@
 
     #post > .picture .bx-pager {top: 93%;}
 
-    .bx-next{
+    #wrapper .picture .bx-wrapper .bx-controls-direction a {
+        position: absolute;
+        top: 50%;
+        margin-top: -16px;
+        outline: 0;
+        width: 32px;
+        height: 32px;
+        text-indent: -9999px;
         z-index:0;
     }
 
