--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -296,6 +296,7 @@
                                           <span>1일</span>&nbsp;&nbsp;좋아요
                                           <span id="md_comment_likeCount" th:text="${child.modal_likeCount}">100개</span>개&nbsp;
                                           <span class="resp_comment">답글달기</span>
+                                          <button class="comment_option"></button>
                                         </div>
 
                                       </div>
