--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -303,7 +303,39 @@
                                     </li>
                                   </ul>
                                 </div>
+
+                              <div id="modal_postSelect" class="modalPost modal_post_overlay">
+                                <div class="modal_post_window">
+                                  <div class="modal_post_title">
+
+                                    <div class="modal_postDelete">
+                                      <span>삭제</span>
+                                    </div>
+
+                                    <div class="modal_postCancel">
+                                      <span>취소</span>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div id="modal_postSelect_delete" class="modalPost modal_post_overlay">
+                                <div class="modal_post_window_delete">
+                                  <div class="modal_post_title">
+                                    <div class="confirm_delete">
+                                      <span>댓글을 삭제할까요?</span>
+                                      <span>이 댓글을 정말 삭제하시겠어요?</span>
+                                    </div>
+                                    <div class="post_delete">
+                                      <span th:data-value="${comment.no}">삭제</span>
+                                    </div>
+                                    <div class="post_delete_cancel">
+                                      <span>취소</span>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                             </div>
+
 
                           </th:block> <!-- comment : ${comments}-->
                         </div>
@@ -375,9 +407,12 @@
                     </button>
                   </div>
                 </div>
+
+
                 <!-- -->
               </article>
           </th:block>
+
           <th:block th:if="${#lists.size(articles) == 0}">
             <div style="display: inline-block;
                         margin-top: 102px;
