--- a/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/IndexLayout.html
@@ -43,6 +43,7 @@
 <th:block layout:fragment="script">
   <script th:src="@{/js/aside.js}"></script>
   <script th:src="@{/js/index.js}"></script>
+  <script th:src="@{/js/indexModal.js}"></script>
 
 </th:block>
 
