2023/04/11 myPage time정렬 제외 구현완료

--- a/Spring/Photostagram/src/main/resources/templates/fragments/my/_side.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/my/_side.html
@@ -69,7 +69,7 @@
             <a th:href="@{/my/history}" class="currentSet">
               <i class="fa-regular fa-calendar-days fa-lg"></i>
               계정 내역
-              <p>공유한 사진과 동영상을 보거나 보관하거나 삭제합니다.</p>
+              <p>계정을 만든 이후 적용한 변경 사항을 검토해보세요.</p>
             </a>
           </div>
         </th:block>
