--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -96,7 +96,7 @@
                                   <span>이메일</span>
                               </td>
                               <td>
-                                  <input type="email" name="email" th:value="${user.email}"/>
+                                  <input type="email" name="email" th:value="${user.email}" disabled/>
                               </td>
                           </tr>
                           <tr>
