--- a/Spring/Photostagram/src/main/resources/static/css/myPage.css
+++ b/Spring/Photostagram/src/main/resources/static/css/myPage.css
@@ -264,7 +264,6 @@
     .activityBox > .oriContent > span {
         display: block;
         color: #888;
-        width: 20px;
         margin-left: 60px;
     }
     .activityBox > .replyContent {
@@ -305,7 +304,6 @@
     .activityBox > .replyContent > span {
         display: block;
         color: #888;
-        width: 20px;
         margin-left: 50px;
     }
 
@@ -454,3 +452,8 @@
         border: 1px solid #e9e9e9;
         color: #888;
       }
+
+      .myTimeStamp {width: 50px;}
+
+      #myActivity > h1 {}
+      #myActivity > h2 {}
