--- a/Spring/Photostagram/src/main/resources/templates/layout/myLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/myLayout.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Photostagram</title>
+  <!-- 아이콘, 폰트 -->
   <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +18,9 @@
           rel="stylesheet"
   />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>      <!-- 제이쿼리 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script> <!-- moment.js Library -->
 
   <link rel="stylesheet" th:href="@{/css/aside.css}" />
   <link rel="stylesheet" th:href="@{/css/myPage.css}"/>
