--- a/Spring/Photostagram/src/main/resources/templates/my/interaction/comment.html
+++ b/Spring/Photostagram/src/main/resources/templates/my/interaction/comment.html
@@ -9,70 +9,76 @@
       layout:decorate="~{layout/myLayout}">
     <th:block layout:fragment="main">
           <div id="myActivity">
-              <div>
-                  <a th:href="@{/my/interaction/like}">좋아요</a>
-                  <a th:href="@{/my/interaction/comment}">댓글</a>
-              </div>
-              <div>
-                  <div class="activityTop">
-                      <h1 class="mySortTitle">최신순</h1>
-                      <a class="mySort">정렬 및 필터</a>
-                      <a class="mySortSelect">선택</a>
+                  <div>
+                      <a th:href="@{/my/interaction/like}">좋아요</a>
+                      <a th:href="@{/my/interaction/comment}">댓글</a>
                   </div>
-                  <div class="activityContents">
-                      <th:block th:each="m:${sortMap}">
-                          <div class="activityBox">
-                              <div class="oriContent">
-                                  <div><img th:src="|@{/}thumb/${m.value.profileImg}" alt="profile"></div>
-                                  <div>
-                                      <h3>
-                                          <p>[[${m.value.username}]]</p>
-                                          [[${m.value.content}]]
-                                      </h3>
-                                  </div>
-                                  <th:block th:if="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
-                                      <video th:src="|@{/}thumb/${m.value.firstThumb}"></video>
-                                  </th:block>
-                                  <th:block th:unless="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
-                                      <img th:src="|@{/}thumb/${m.value.firstThumb}">
-                                  </th:block>
-                                  <span>1주</span>
-                              </div>
-                              <th:block th:each="c:${m.value.comments}">
-                                  <div class="replyContent">
-                                      <div>
-                                          <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
-                                              <img th:src="|@{/}thumb/${user.profileImg}" alt="profile"/>
-                                          </th:block>
-                                          <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
-                                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile"/>
-                                          </th:block>
-                                      </div>
+                  <th:block th:if="${#maps.isEmpty(sortMap)}">
+                      <h1>댓글을 남기지 않았습니다.</h1>
+                      <h2>사진이나 동영상에 댓글을 남기면 여기에 표시됩니다.</h2>
+                  </th:block>
+                  <th:block th:unless="${#maps.isEmpty(sortMap)}">
+                  <div>
+                      <div class="activityTop">
+                          <h1 class="mySortTitle">최신순</h1>
+                          <a class="mySort">정렬 및 필터</a>
+                          <a class="mySortSelect">선택</a>
+                      </div>
+                      <div class="activityContents">
+                          <th:block th:each="m:${sortMap}">
+                              <div class="activityBox">
+                                  <div class="oriContent">
+                                      <div><img th:src="|@{/}thumb/${m.value.profileImg}" alt="profile"></div>
                                       <div>
                                           <h3>
-                                              <p>[[${user.username}]]</p>
-                                              [[${c.comment}]]
+                                              <p>[[${m.value.username}]]</p>
+                                              [[${m.value.content}]]
                                           </h3>
                                       </div>
-                                      <span>1주</span>
-                                      <input name="photo" type="checkbox" onclick="getCheckedCnt()" th:id="${c.no}" th:data-value="${c.no}">
-                                      <label class="myCheckOff" th:for="${c.no}" th:data-value="${c.no}"></label>
+                                      <th:block th:if="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
+                                          <video th:src="|@{/}thumb/${m.value.firstThumb}"></video>
+                                      </th:block>
+                                      <th:block th:unless="${#strings.endsWith(m.value.firstThumb, '.mp4')} == true">
+                                          <img th:src="|@{/}thumb/${m.value.firstThumb}">
+                                      </th:block>
+                                      <span class="myTimeStamp" th:data-value="${m.value.rdate}"></span>
                                   </div>
-                              </th:block>
-                              <th:block th:if="${m.value.commentCount} > 3">
-                                <a class="moreRe" th:href="@{/board/post (no=${m.value.no})}">ㅡ 스레드 더 보기</a>
-                              </th:block>
-                              <th:block th:unless="${m.value.commentCount} > 3">
-                              </th:block>
-                          </div>
-                      </th:block>
+                                  <th:block th:each="c:${m.value.comments}">
+                                      <div class="replyContent">
+                                          <div>
+                                              <th:block th:if="${not #strings.isEmpty(user.profileImg)}">
+                                                  <img th:src="|@{/}thumb/${user.profileImg}" alt="profile"/>
+                                              </th:block>
+                                              <th:block th:unless="${not #strings.isEmpty(user.profileImg)}">
+                                                  <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile"/>
+                                              </th:block>
+                                          </div>
+                                          <div>
+                                              <h3>
+                                                  <p>[[${user.username}]]</p>
+                                                  [[${c.comment}]]
+                                              </h3>
+                                          </div>
+                                          <span class="myTimeStamp" th:data-value="${c.rdate}">1주</span>
+                                          <input name="photo" type="checkbox" onclick="getCheckedCnt()" th:id="${c.no}" th:data-value="${c.no}">
+                                          <label class="myCheckOff" th:for="${c.no}" th:data-value="${c.no}"></label>
+                                      </div>
+                                  </th:block>
+                                  <th:block th:if="${m.value.commentCount} > 3">
+                                    <a class="moreRe" th:href="@{/board/post (no=${m.value.no})}">ㅡ 스레드 더 보기</a>
+                                  </th:block>
+                                  <th:block th:unless="${m.value.commentCount} > 3">
+                                  </th:block>
+                              </div>
+                          </th:block>
+                      </div>
                   </div>
-              </div>
-              <div class="activityPop" style="display: none;">
-                  <span class="closePop">X</span>
-                  <h1><span id="deleteCount">0</span>개 선택됨</h1>
-                  <button class="mySortDelete" th:data-type="comment">삭제</button>
-              </div>
+                  <div class="activityPop" style="display: none;">
+                      <span class="closePop">X</span>
+                      <h1><span id="deleteCount">0</span>개 선택됨</h1>
+                      <button class="mySortDelete" th:data-type="comment">삭제</button>
+                  </div>
+              </th:block>
           </div>
     </th:block>
 </html>
