--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -1082,6 +1082,12 @@ html {height: 100%;}
   background-position: center;
 }
 
+#tooltipArea {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .tag1 {
     position: absolute;
     background: #000000;
