--- a/Spring/Photostagram/src/main/resources/templates/board/quest.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/quest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/boardLayout}">
+      layout:decorate="~{layout/questLayout}">
 <th:block layout:fragment="main">
     <section class="quest-screen">
         <main class="quest-content">
@@ -9,7 +9,7 @@
                 <div class="content2">
                     <div class="content3">
                         <div class="content4">
-
+                            <th:block th:each="${allImg.thumb}">
                             <div class="content5">
                                 <div class="content6">
                                     <a class="content7" href="#">
@@ -25,7 +25,7 @@
                                     </a>
                                 </div>
                             </div>
-
+                            </th:block>
                         </div>
                     </div>
                 </div>
