--- a/Spring/Photostagram/src/main/resources/templates/fragments/_postModal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_postModal.html
@@ -44,6 +44,10 @@
                     "background-position" : "center"
                 });
             });
+
+            $('.modal_title_side_post_modify').on('click', function(){
+
+            });
         });
     </script>
     <div id="modal_postSelect" class="modalPost modal_post_overlay">
