--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -900,7 +900,7 @@ html {height: 100%;}
         transition: all .15s ease-in-out;
         width:500px;
         height: 548px;
-        overflow: hidden;
+        overflow: visible;
         position: relative;
     }
 
